# Labaratory

./: .gitignore  sonar-project.properties
.github/workflows/: build.yml  sonarcloud.yml
laba1/: CMakeLists.txt  README.md  laba1.sln
laba1/laba1/: CMakeLists.txt  Matrix.cpp  Matrix.h  laba1.vcxproj  laba1.vcxproj.filters  main.cpp
laba1/laba1/headers/: Matrix.h
laba2/: CMakeLists.txt  README.md  laba2.sln
laba2.1/: CMakeLists.txt  README.md  laba2.1.sln
laba2.1/laba2.1/: laba2.1.vcxproj  laba2.1.vcxproj.filters
laba2.1/laba2.1/headers/: Array.h
laba2.1/laba2.1/sources/: Array.cpp  main.cpp
laba2/laba2/: Array.cpp  Array.h  laba2.vcxproj  laba2.vcxproj.filters  main.cpp
laba2/laba2/headers/: Array.h
laba2/laba2/sources/: Array.cpp  main.cpp
laba3/: CMakeLists.txt  README.md  laba3.sln
laba3/laba3/: bicycle.cpp  bicycle.h  car.cpp  car.h  carriage.h  laba3.vcxproj  laba3.vcxproj.filters  main.cpp  transport.cpp
laba3/laba3/headers/: bicycle.h  car.h  carriage.h  transport.h
laba3/laba3/sources/: bicycle.cpp  car.cpp  carriage.cpp  main.cpp  transport.cpp
laba4/: CMakeLists.txt  README.md  laba4.sln
laba4/laba4/: ancestor.h  grandchild.h  laba4.vcxproj  laba4.vcxproj.filters  main.cpp
laba4/laba4/headers/: ancestor.h  child.h  functions.h  grandchild.h
laba4/laba4/sources/: main.cpp
laba5/: CMakeLists.txt  README.md  laba5.sln
laba5/laba5/: laba5.vcxproj
laba5/laba5/headers/: menu.h  utils.h
laba5/laba5/sources/: main.cpp  menu.cpp
laba6/: CMakeLists.txt  README.md  laba6.sln
laba6/laba6/: laba6.vcxproj
laba6/laba6/headers/: bicycle.h  car.h  carriage.h  transport.h  validation_exception.h
laba6/laba6/sources/: bicycle.cpp  car.cpp  (+3 more)
laba7/: CMakeLists.txt  README.md  laba7.sln
laba7/laba7/: laba7.vcxproj
(+7 files in other folders)
